objects/Contact.object
<CustomObject
    <fields>
        <fullName>MP_Qualified_by_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a Report State and the License State do not align but the record has been reviewed and qualified.</description>
        <inlineHelpText>Indicates that practitioner was qualified knowing that data elements were missing at the time.  Comments should be recorded.</inlineHelpText>
        <label>Qualified by Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Major_KOL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Major KOL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mar_Samples__c</fullName>
        <label>Mar Samples</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketable_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketable User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Exclusion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Exclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Flag_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Flag 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Flag_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Flag 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Flag_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Flag 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_last_changed__c</fullName>
        <description>Hidden field records the match record that last changed the Follow-up dates</description>
        <label>Match last changed</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matches_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Matches Identified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Erlotinib_TRx_Decile__c</fullName>
        <label>Max Erlotinib TRx Decile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DECILE 1</fullName>
                    <label>Decile 1</label>
                </value>
                <value>
                    <fullName>DECILE 2</fullName>
                    <label>Decile 2</label>
                </value>
                <value>
                    <fullName>DECILE 3</fullName>
                    <label>Decile 3</label>
                </value>
                <value>
                    <fullName>DECILE 4</fullName>
                    <label>Decile 4</label>
                </value>
                <value>
                    <fullName>DECILE 5</fullName>
                    <label>Decile 5</label>
                </value>
                <value>
                    <fullName>DECILE 6</fullName>
                    <label>Decile 6</label>
                </value>
                <value>
                    <fullName>DECILE 7</fullName>
                    <label>Decile 7</label>
                </value>
                <value>
                    <fullName>DECILE 8</fullName>
                    <label>Decile 8</label>
                </value>
                <value>
                    <fullName>DECILE 9</fullName>
                    <label>Decile 9</label>
                </value>
                <value>
                    <fullName>DECILE 10</fullName>
                    <label>Decile 10</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Erlotinib_TRx__c</fullName>
        <label>Max Erlotinib TRx</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Samples__c</fullName>
        <label>May Samples</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedProBT__External_ID__c</fullName>
        <label>MedProID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MedPro_State_License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to Medpro State License record.</inlineHelpText>
        <label>State License</label>
        <referenceTo>MedPro_State_Licenses__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_Degree_1__c</fullName>
        <label>Degree 1</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Degree_2__c</fullName>
        <label>Degree 2</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCCN_Account__c</fullName>
        <description>Checked if account is NCCN.</description>
        <formula>IF(Account.NCCN__c=TRUE,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the account for this contact an NCCN center?</inlineHelpText>
        <label>Is NCCN Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCI_Center__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCI Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPI_Matched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPI Matched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPI_Number__c</fullName>
        <inlineHelpText>Read only field used to sync with LIMS Physicians, domestic and international.</inlineHelpText>
        <label>NPI Number</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Number_of_Samples__c</fullName>
        <inlineHelpText>Number of samples by this NPI number. Uses DLRS</inlineHelpText>
        <label>NPI Number of Samples</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <label>NPI</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name_and_Quintile__c</fullName>
        <formula>TEXT(Best_Quintile__c) &amp; &quot;:    &quot; &amp;  Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quintile: Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_Long_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Long Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Treatment__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Needs Treatment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Case__c</fullName>
        <formula>HYPERLINK(&apos;/setup/ui/recordtypeselect.jsp?ent=Case&amp;retURL=%2F&apos; &amp; Account.Id &amp; &apos;&amp;save_new_url=%2F500%2Fe%3FretURL%3D%252F&apos; &amp; Account.Id &amp; &apos;%26def_contact_id%3D&apos; &amp; Id &amp; &apos;%26def_account_id%3D&apos; &amp; Account.Id, &apos;New Case&apos; , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Portal_User_Since__c</fullName>
        <label>New Portal User Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_York_Sample__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated by workflow &apos;NY Sample Check Contact&apos;</description>
        <label>New York Sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Follow_up_Date__c</fullName>
        <inlineHelpText>Next date that a follow-up is scheduled for this contact&apos;s Match Records.</inlineHelpText>
        <label>Next Follow-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Follow_up_Trial__c</fullName>
        <label>Next Follow-up Trial</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Longer_With_Us__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to mark inactive employees of GH.</description>
        <label>Departed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Of_kits__c</fullName>
        <label>No Of kits</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Not_owned_by_account_owner__c</fullName>
        <formula>IF(LEFT(Account_Owner_ID__c,15)=Contact_Owner_ID__c, 
FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checked if contact owner is not equal to account owner</inlineHelpText>
        <label>Not owned by account owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_about_MD_2__c</fullName>
        <description>Hidden field to allow updating from Outreach Activity</description>
        <label>Notes about MD 2</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_about_MD__c</fullName>
        <inlineHelpText>Internal Use Only</inlineHelpText>
        <label>Notes about MD</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nov_Samples__c</fullName>
        <label>Nov Samples</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Additional_Guests__c</fullName>
        <label>Number of Additional Guests</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Samples_2_Months_Ago__c</fullName>
        <label>Number of Samples 2 Months Ago</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Samples_3_Months_Ago__c</fullName>
        <label>Number of Samples 3 Months Ago</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Samples_Current_Month__c</fullName>
        <label>Number of Samples Current Month</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Samples_Current_Qtr__c</fullName>
        <label>Number of Samples Current Qtr</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Samples_Last_Month__c</fullName>
        <label>Number of Samples Last Month</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Samples_Rec_d_in_the_last_year__c</fullName>
        <description>Updated via DLRS</description>
        <label>Last 12 Months&apos; Samples</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Samples__c</fullName>
        <label>Number of Samples</label>
        <summaryForeignKey>Guardant_360_Sample__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OMD_Country__c</fullName>
        <inlineHelpText>Two-letter country code. OMD = &apos;Ordering MD&apos;.</inlineHelpText>
        <label>OMD Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oct_Samples__c</fullName>
        <label>Oct Samples</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Office Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ISR_Contact__c.Related_Contact__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ISR_Contact__c</referenceTo>
        <relationshipLabel>Related MD</relationshipLabel>
        <relationshipName>Office</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Onsite_Visit_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onsite Visit Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PECOS_O_R__c</fullName>
        <formula>IF( Actual_NPI__r.MP_PECOS_O_R__c = &quot;Y&quot;,TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Practitioner’s NPI appears on the PECOS ordering and referring list allowing for ordering and referring services under Medicare and Medicaid per CMS.</inlineHelpText>
        <label>PECOS O&amp;R</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PI__c</fullName>
        <description>Denotes which trials a physician could be a PI for</description>
        <label>PI?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pardot_MA_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pardot MA User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pardot_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pardot_Sync__c</fullName>
        <description>Text timestamp for use to trigger re-sync with Pardot. Initiated using Scheduled Record Update process</description>
        <label>Pardot Sync</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_ID__c</fullName>
        <formula>Account.Parent.Case_Safe_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_BPID__c</fullName>
        <label>Parent BPID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pharma_Company_Main_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pharma Company Main Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pharma_Referrals_Permission_to_Contact__c</fullName>
        <label>Pharma Referrals Permission to Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Physician_Affiliation_Last_Final_Date__c</fullName>
        <formula>IF( 
ISBLANK(Care_Team_Member__c), 
Last_Affiliation_Sample_Final_ReportDate__c, 
(IF( 
Care_Team_Member__r.AccountId&lt;&gt;AccountId, 
Care_Team_Member__r.Last_Affiliation_Sample_Final_ReportDate__c, 
Care_Team_Member__r.Last_Sample_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field. Based on Final Report Date</inlineHelpText>
        <label>Physician Affiliation Last Final Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Physician_Affiliation_Last_Sample_Date__c</fullName>
        <formula>IF(
ISBLANK(Care_Team_Member__c),
Last_Affiliation_Sample_Date__c,
(IF(
Care_Team_Member__r.AccountId&lt;&gt;AccountId, 
Care_Team_Member__r.Last_Affiliation_Sample_Date__c, 
Care_Team_Member__r.Last_Sample_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field</inlineHelpText>
        <label>Physician Affiliation Last Sample Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Physician_Billing_Type__c</fullName>
        <label>Physician Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical Trial : ROW</fullName>
                </value>
                <value>
                    <fullName>Clinical Trial : US</fullName>
                </value>
                <value>
                    <fullName>DirectBill : US</fullName>
                </value>
                <value>
                    <fullName>Distributors : ROW</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Cancelled</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Clinical Utility</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - LUNAR</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Medical Affairs</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Pharma</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Proficiency</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Promotional</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Quality Testing</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - ROW</fullName>
                </value>
                <value>
                    <fullName>Financial Indigent</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pharma : ROW</fullName>
                </value>
                <value>
                    <fullName>Pharma : US</fullName>
                </value>
                <value>
                    <fullName>Private Insurance/Employee Health Plan</fullName>
                    <default>true</default>
                    <label>Private Insurance/Employee Health Plan</label>
                </value>
                <value>
                    <fullName>Private Insurance/Employee Health Plan No OOP</fullName>
                </value>
                <value>
                    <fullName>Research : ROW</fullName>
                </value>
                <value>
                    <fullName>Research : US</fullName>
                </value>
                <value>
                    <fullName>Self-Pay Patient</fullName>
                </value>
                <value>
                    <fullName>Self-Pay Sponsored</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Physician_Last_Finalized_Sample_Date__c</fullName>
        <formula>IF( 
AND(ISPICKVAL(Integration_Contact_Type__c, &apos;Physician&apos;), 
ISBLANK(Last_Affiliation_Sample_Final_ReportDate__c)), 
Last_Finalized_Sample_Date__c, 
Last_Affiliation_Sample_Final_ReportDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field. Based on Date Received</inlineHelpText>
        <label>Physician Last Finalized Sample Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Physician_Last_Sample_Date__c</fullName>
        <formula>IF(
AND(ISPICKVAL(Integration_Contact_Type__c, &apos;Physician&apos;),
ISBLANK(Last_Affiliation_Sample_Date__c)),  
Last_Sample_Date__c,
Last_Affiliation_Sample_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field. Last Sample Date of the MD at main or affiliate account, whichever is used for Account Integration targeting</inlineHelpText>
        <label>Physician Last Sample Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Physician_Quintile__c</fullName>
        <label>Physician Quintile</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portal_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Primary__c</fullName>
        <label>Portal Primary</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Portal_Quaternary__c</fullName>
        <label>Portal Quaternary</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Portal_Quinary__c</fullName>
        <label>Portal Quinary</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Portal_Secondary__c</fullName>
        <label>Portal Secondary</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Portal_Senary__c</fullName>
        <label>Portal Senary</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Portal_Site_Mgr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Site Mgr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Tertiary__c</fullName>
        <label>Portal Tertiary</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Portal_User_Name__c</fullName>
        <label>Portal User Name</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Practice_Contact_First_Name__c</fullName>
        <description>This Field is from the Pardot Request Guardant360 Kit</description>
        <inlineHelpText>This Field is from the Pardot Request Guardant360 Kit</inlineHelpText>
        <label>Practice Contact First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Contact_Last_Name__c</fullName>
        <description>This Field is from the Pardot Request Guardant360 Kit</description>
        <inlineHelpText>This Field is from the Pardot Request Guardant360 Kit</inlineHelpText>
        <label>Practice Contact Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Office_Contact_Email__c</fullName>
        <description>This Field is from the Pardot Request Guardant360 Kit</description>
        <inlineHelpText>This Field is from the Pardot Request Guardant360 Kit</inlineHelpText>
        <label>Practice Office Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone and/or Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Both Email and Phone</fullName>
                    <isActive>false</isActive>
                    <label>Both Email and Phone</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Last_Sample_Date__c</fullName>
        <description>NS: 08/08/18 This field is used in work flow rule to capture the previous last sample date to calculate the number days from last sample date to today.</description>
        <label>Previous Last Sample Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Sample_Date__c</fullName>
        <label>Previous Sample Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Year_s_Expense_Total__c</fullName>
        <label>Previous Year&apos;s Expense Total</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Cancer_Type__c</fullName>
        <label>Primary Cancer Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Ordering_MD_Last_Finalized_Date__c</fullName>
        <formula>CASE(Integration_Contact_Type__c,
&quot;Physician&quot;, Last_Finalized_Sample_Date__c,
&quot;Care Team Member&quot;,Care_Team_Member__r.Last_Finalized_Sample_Date__c,
Last_Affiliation_Sample_Final_ReportDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Ordering MD-Last Finalized Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Ordering_MD_Last_Name__c</fullName>
        <formula>Care_Team_Member__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field</inlineHelpText>
        <label>Primary Ordering MD-Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Ordering_MD_Last_Sample_Date__c</fullName>
        <formula>CASE(Integration_Contact_Type__c,
&quot;Physician&quot;, Physician_Last_Sample_Date__c,
Physician_Affiliation_Last_Sample_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for Account Integration Targets. Shows the last sample date by the Physician at the account that the AIT is focusing on.</inlineHelpText>
        <label>Primary Ordering MD-Last Sample Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Specialty__c</fullName>
        <inlineHelpText>In case of multiple specialties, please select lung as primary if it applies.</inlineHelpText>
        <label>Primary Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lung</fullName>
                </value>
                <value>
                    <fullName>Breast</fullName>
                </value>
                <value>
                    <fullName>GI</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>GYN</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prostate_Prescriber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prostate Prescriber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Push_to_LabVantage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push to LabVantage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q1_2018_Number_of_Samples__c</fullName>
        <inlineHelpText>Hidden field used for reporting</inlineHelpText>
        <label>Q1-2018 # of Samples</label>
        <summaryFilterItems>
            <field>Guardant_360_Sample__c.Quarter_Received__c</field>
            <operation>equals</operation>
            <value>Q1-2018</value>
        </summaryFilterItems>
        <summaryForeignKey>Guardant_360_Sample__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Q2_2018_Number_of_Samples__c</fullName>
        <inlineHelpText>hidden field used for reporting</inlineHelpText>
        <label>Q2-2018 # of Samples</label>
        <summaryFilterItems>
            <field>Guardant_360_Sample__c.Quarter_Received__c</field>
            <operation>equals</operation>
            <value>Q2-2018</value>
        </summaryFilterItems>
        <summaryForeignKey>Guardant_360_Sample__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Q3_2018_of_Samples__c</fullName>
        <inlineHelpText>Hidden field used for reporting</inlineHelpText>
        <label>Q3-2018 # of Samples</label>
        <summaryFilterItems>
            <field>Guardant_360_Sample__c.Quarter_Received__c</field>
            <operation>equals</operation>
            <value>Q3-2018</value>
        </summaryFilterItems>
        <summaryForeignKey>Guardant_360_Sample__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Q4_2017_Number_of_Samples__c</fullName>
        <inlineHelpText>Hidden field used for reporting</inlineHelpText>
        <label>Q4-2017 # of Samples</label>
        <summaryFilterItems>
            <field>Guardant_360_Sample__c.Quarter_Received__c</field>
            <operation>equals</operation>
            <value>Q4-2017</value>
        </summaryFilterItems>
        <summaryForeignKey>Guardant_360_Sample__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Q4_2018_of_Samples__c</fullName>
        <inlineHelpText>Hidden field used for reporting</inlineHelpText>
        <label>Q4-2018 # of Samples</label>
        <summaryFilterItems>
            <field>Guardant_360_Sample__c.Quarter_Received__c</field>
            <operation>equals</operation>
            <value>Q4-2018</value>
        </summaryFilterItems>
        <summaryForeignKey>Guardant_360_Sample__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QualifiedAccount__c</fullName>
        <formula>if(or(Account.Qualified__c ==true ,Account.Unqualified_by_CS__c == true ),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualified Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualified_to_send_to_LIMS__c</fullName>
        <formula>Push_to_LabVantage__c || 
Qualified__c ||
Is_Secondary_Physician__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualified to send to LIMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quaternary_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quaternary Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quinary_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quinary Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quintile_4_5__c</fullName>
        <formula>Best_Quintile__c&gt;=4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quintile 4-5</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>